--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "author": "maniacata",
     "license": "MIT",
     "dependencies": {
+        "gbk-string": "^0.1.0",
         "got": "^9.6.0",
         "jsdom": "^14.0.0",
         "tesseract.js": "^1.0.14",
