--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
     "name": "hust-network-utils",
     "version": "1.0.0",
     "description": "A collection of utils for happy web-surfing at HUST.",
-    "main": "index.js",
     "author": "maniacata",
     "license": "MIT",
+    "scripts": {
+        "scan": "cd ./src/ && node scan.js"
+    },
     "dependencies": {
-        "async-limiter": "^1.0.0",
         "got": "^9.6.0",
+        "p-limit": "^2.2.0",
         "tesseract.js": "^1.0.14",
         "tough-cookie": "^3.0.1"
     }
